only adding comments function is added

--- a/index.html
+++ b/index.html
@@ -21,37 +21,10 @@
 
   <!-- Pull dynamic content from the data.json file -->
   <div class="container" id="container">
-    <div class="comment" id="comment">
+    
+    <div class="current-user-comment" id="current-user-comment">
       
-      <div class="individualComment" id="individualComment">
-        <div class="heading" id="heading">
-          <img src="images/avatars/image-amyrobson.png" alt="avatar">
-          <span class="name">Name</span>
-          <span class="time">Time stamp</span>
-        </div>
-        <p class="content">content</p>
-        <div class="commentFooter" id="commentFooter">
-          <div class="scoreButton" id="scoreButton">
-            <img src="images/icon-plus.svg" alt="upvote">
-            <span class="score">&nbsp; 15 &nbsp;</span>
-            <img src="images/icon-minus.svg" alt="downvote">
-          </div>
-          <div class="reply">
-            <img src="images/icon-reply.svg" alt="reply">
-            &nbsp; Reply
-          </div>
-        </div>
-      </div>
-
     </div>
-    <div class="user-input" id="user-input">
-      <input type="text">
-      <div class="user-send" id="user-send">
-        <img src="images/avatars/image-juliusomo.png" alt="avatar">
-        <button type="submit">SEND</button>
-      </div>
-    </div>
-
   </div>
 
   <!-- <div class="attribution">
