--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
 
   <!-- Pull dynamic content from the data.json file -->
   <div class="container" id="container">
-    
-    <div class="current-user-comment" id="current-user-comment">
-      
+    <div class="comments" id="comments"></div>
+    <div class="current-user-comment" id="current-user-comment"></div>
+    <div class="overlay hidden" id="overlay"></div>
+  </div>
+  <div class="modal hidden" id="modal">
+    <h2>Delete Comment </h2>
+    <p>Are you sure you want to delete this comment? This will remove the comment and cannot be undone.</p>
+    <div class="modal-button">
+      <button class="cancel" id="cancel">No, Cancel</button>
+      <button class="confirm" id="confirm">Yes, Delete</button>
     </div>
   </div>
+
 
   <!-- <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
